# eos-dapp-template

./: .gitmodules
dapp.contracts/: CMakeLists.txt  build.sh
dapp.contracts/contracts/: CMakeLists.txt
dapp.contracts/contracts/dapp.system/: CMakeLists.txt
dapp.contracts/contracts/dapp.system/include/dapp.system/: dapp.system.hpp
dapp.contracts/contracts/dapp.system/src/: dapp.system.cpp
dapp.contracts/contracts/dapp.token/: CMakeLists.txt
dapp.contracts/contracts/dapp.token/include/dapp.token/: dapp.token.hpp
dapp.contracts/contracts/dapp.token/src/: dapp.token.cpp
dapp.contracts/tests/: contracts.hpp.in  dapp.token_tests.cpp
dapp.frontend/: package.json
